@@ -1,5 +1,10 @@
 2004-12-13 Bart Hakvoort  <gparted@users.sf.net>
 
+	* Replaced boolean 'resize' with 'shrink' and 'grow'. It seems some filesystems only support growing (e.g. xfs) so i need
+	  two flags to control the behaviour of the filesystemclasses.
+
+2004-12-13 Bart Hakvoort  <gparted@users.sf.net>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: Removed a couple of unnecesarry variables. (saves a few bytes in memory =) )
 
